parameter encodings fixed